@@ -31,3 +31,5 @@ using System.Runtime.InteropServices;
 //
 //[assembly: AssemblyVersion("0.0.0.0")]
 [assembly: AssemblyFileVersion("1.0.0.0")]
+
+[assembly: KSPAssemblyDependency("CommNetManagerAPI", 1, 0)]
