@@ -1,7 +1,7 @@
 ﻿{
      "NAME":"ESLD Jump Beacons",
      "URL":"",
-     "DOWNLOAD":"https://github.com/DBooots/ESLDBeacons/releases",
+     "DOWNLOAD":"https://github.com/linuxgurugamer/ESLDBeacons/releases",
      "GITHUB":{
          "USERNAME":"DBooots",
          "REPOSITORY":"ESLDBeacons",
